--- a/bracket_buddy/static/css/style.css
+++ b/bracket_buddy/static/css/style.css
@@ -8,23 +8,15 @@
   background-image: url(../images/header.jpg);
   background-position: bottom;
   background-size: cover;
-  height: 250px;}
+  height: 250px;
 }
 
-/* select {
-  display: block;
-  width: 100%;
-  padding: 0.25rem 1.5rem;
-  clear: both;
-  font-weight: 400;
-  color: #212121;
-  text-align: left;
-  white-space: nowrap;
-  background-color: transparent;
-  border: 0;
+.mainjumbo2 {
+  position: relative;
+  margin: 0;
+  background: #000;
+  background-image: url(../images/team.jpg);
+  background-position: center;
+  background-size: cover;
+  height: 250px;
 }
-select {
-  display: block;
-  padding: 0.25rem 1.5rem;
-  color: #212121;
-} */
