--- a/bracket_buddy/templates/scatter2.html
+++ b/bracket_buddy/templates/scatter2.html
@@ -5,11 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://fonts.googleapis.com/css?family=Graduate" rel="stylesheet">
   <link rel="stylesheet" href="https://bootswatch.com/4/materia/bootstrap.css" />
   <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-    <link href="https://fonts.googleapis.com/css?family=Graduate" rel="stylesheet">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <title>Bracket Buddy - Deep Dive</title>
 </head>
 
@@ -41,11 +39,12 @@
   </nav>
 <!--  =================================================== HEADER -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <form class="d-flex w-100">
-  <div class="form-row">
-    <label class="my-1 mr-2" for="year-filter">Year</label>
-    <div>
-      <select id="year-dropdown" name="year-filter" class="custom-select my-1 mr-sm-2">
+  <form class="d-flex w-100 form-inline">
+  <div class="form-row d-flex justify-content-sm-start">
+    <div class="form-group">
+          <strong class="my-1 mr-3">Select Grouping & Stats&nbsp;&nbsp;</strong>
+      <label class="my-1 mr-3" for="year-filter">Year</label>
+      <select id="year-dropdown" name="year-filter" class="custom-select my-1 mr-4">
         <option value="all">All Years</option>
         <option value="2010">2010</option>
         <option value="2011">2011</option>
@@ -59,20 +58,19 @@
         <option value="2019" selected>2019</option>
       </select>
     </div>
-    <label class="my-1 mr-2" for="tournament-filter">Grouping</label>
-    <div>
-      <select id="tournament-dropdown" name="tournament-filter" class="custom-select my-1 mr-sm-2">
+
+    <div class="form-group">
+    <label class="my-1 mr-3" for="tournament-filter">Grouping&nbsp;&nbsp;</label>
+      <select id="tournament-dropdown" name="tournament-filter" class="custom-select my-1 mr-4">
         <option value="all">All Teams</option>
         <option value="seed" selected>Tournament Teams</option>
         <option value="FinalFour">Final Four Teams</option>
       </select>
     </div>
-  </div>
-  <div class="form-row">
-  <div id="xAxisFilter">
-    <label class="my-1 mr-2" for="x-axis-filter">X Axis</label>
-    <div>
-      <select id="x-axis-dropdown" name="x-axis-filter" class="custom-select my-1 mr-sm-2">
+
+  <div class="form-group" id="xAxisFilter">
+    <label class="my-1 mr-3" for="x-axis-filter">X Axis</label>
+      <select id="x-axis-dropdown" name="x-axis-filter" class="custom-select my-1 mr-4">
         <option value="AdjEM" data-label="Adj. Efficiency Margin" selected>Adj. Efficiency Margin</option>
         <option value="Tempo" data-label="Tempo">Tempo</option>
         <option value="AdjTempo" data-label="Adj. Tempo">Adj. Tempo</option>
@@ -110,12 +108,11 @@
         <option value="ARate" data-label="Assist Rate">Assist Rate</option>
         <option value="OppARate" data-label="Opponent Assist Rate">Opponent Assist Rate</option>
       </select>
-    </div>
   </div>
-  <div id="yAxisFilter">
-    <label class="my-1 mr-2" for="y-axis-filter">Y Axis</label>
-    <div>
-      <select id="y-axis-dropdown" name="y-axis-filter" class="custom-select my-1 mr-sm-2">
+
+  <div  class="form-group" id="yAxisFilter">
+    <label class="my-1 mr-3" for="y-axis-filter">Y Axis</label>
+      <select id="y-axis-dropdown" name="y-axis-filter" class="custom-select my-1 mr-4">
         <option value="AdjEM" data-label="Adj. Efficiency Margin">Adj. Efficiency Margin</option>
         <option value="Tempo" data-label="Tempo" selected>Tempo</option>
         <option value="AdjTempo" data-label="Adj. Tempo">Adj. Tempo</option>
@@ -153,16 +150,14 @@
         <option value="ARate" data-label="Assist Rate">Assist Rate</option>
         <option value="OppARate" data-label="Opponent Assist Rate">Opponent Assist Rate</option>
       </select>
-    </div>
   </div>
-</div>
-  <div class="form-row">
-  <div class="my-1 mr-2" id="team-select">
-    <strong>Add a Team</strong>
-    <div>
-      <label class="my-1 mr-2" for="team-year-filter">Choose a Year</label>
-      <div>
-        <select id="team-year-dropdown" name="team-year-filter" class="custom-select my-1 mr-sm-2">
+  </div>
+
+  <div class="form-row d-flex justify-content-sm-start">
+  <div class="form-group" id="team-select">
+    <strong class="my-1 mr-3">Add a Team</strong>
+      <label class="my-1 mr-3" for="team-year-filter">Choose a Year</label>
+        <select id="team-year-dropdown" name="team-year-filter" class="custom-select my-1 mr-4">
           <option value="2010">2010</option>
           <option value="2011">2011</option>
           <option value="2012">2012</option>
@@ -174,12 +169,8 @@
           <option value="2018">2018</option>
           <option value="2019" selected>2019</option>
         </select>
-      </div>
-    </div>
-    <div>
-      <label class="my-1 mr-2" for="team-filter">Choose a Team</label>
-      <div>
-        <select id="team-dropdown" name="team-filter" class="custom-select my-1 mr-sm-2">
+      <label class="my-1 mr-3" for="team-filter">Choose a Team</label>
+        <select id="team-dropdown" name="team-filter" class="custom-select my-1 mr-4">
           <option value="none" selected>Select a Team</option>
           <option value="Air Force">Air Force</option>
           <option value="Akron">Akron</option>
@@ -531,8 +522,6 @@
         </select>
       </div>
     </div>
-  </div>
-</div>
 </form>
 </nav>
 
@@ -540,19 +529,19 @@
   <div class="row">
     <div class="col-md-12">
       <div id="legend">
-        <span>
+        <span class="d-flex justify-content-center w-100">
 <i style="background: #FFFF00; border-radius: 50%">&nbsp;&nbsp;&nbsp;&nbsp;</i><span>&nbsp;&nbsp;Champion&nbsp;&nbsp;&nbsp;&nbsp;</span>
 <i style="background: #ADFF2F; border-radius: 50%">&nbsp;&nbsp;&nbsp;&nbsp;</i><span>&nbsp;&nbsp;Final Four&nbsp;&nbsp;&nbsp;&nbsp;</span>
 <i style="background: #ff7f7f; border-radius: 50%">&nbsp;&nbsp;&nbsp;&nbsp;</i><span>&nbsp;&nbsp;Tournament&nbsp;&nbsp;&nbsp;&nbsp;</span>
 <i style="background: #89bdd3; border-radius: 50%">&nbsp;&nbsp;&nbsp;&nbsp;</i><span>&nbsp;&nbsp;Non-Tournament&nbsp;&nbsp;&nbsp;&nbsp;</span>
 </span>
 <span id="legend-selected-team"></span>
-<span style="text-align: center" id="correlation"></span>
+<span class="d-flex justify-content-center w-100" style="text-align: center" id="correlation"></span>
       </div>
     </div>
   </div>
-  <div class="row">
-    <div class="col-md-12">
+  <div class="row justify-content-start w-100">
+    <div class="col-md-12 w-100">
       <div id="scatter"></div>
     </div>
   </div>
