--- a/bracket_buddy/static/css/style.css
+++ b/bracket_buddy/static/css/style.css
@@ -2,21 +2,47 @@
 	text-align: center;
 }
 .mainjumbo {
-  position: relative;
-  margin: 0;
-  background: white;
-  background-image: url(../images/header.jpg);
-  background-position: bottom;
-  background-size: cover;
-  height: 250px;
+	position: relative;
+	margin: 0;
+	background: white;
+	background-image: url(../images/header.jpg);
+	background-position: bottom;
+	background-size: cover;
+	height: 250px;
 }
 
 .mainjumbo2 {
-  position: relative;
-  margin: 0;
-  background: #000;
-  background-image: url(../images/team.jpg);
-  background-position: center;
-  background-size: cover;
-  height: 250px;
+	position: relative;
+	margin: 0;
+	background: #000;
+	background-image: url(../images/team.jpg);
+	background-position: center;
+	background-size: cover;
+	height: 250px;
+}
+
+.team-name {
+	text-align: center;
+	font-size: large;
+}
+
+.team-score {
+	text-align: center;
+	font-size: large;
+}
+
+.home-team-name {
+	text-align: center;
+}
+
+.away-team-name {
+	text-align: center;
+}
+
+.home-team-score {
+	text-align: center;
+}
+
+.away-team-score {
+	text-align: center;
 }
