CSS work, made navbars uniform

--- a/bracket_buddy/templates/scatter.html
+++ b/bracket_buddy/templates/scatter.html
@@ -25,17 +25,20 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a id="predict" class="nav-link" href="/predict">Predict Winner</a>
-        </li>
+            <a id="team-page" class="nav-link" href="/team">Team Statistics</a>
+          </li>
         <li class="nav-item">
-          <a id="team-page" class="nav-link" href="/team">Team Statistics</a>
-        </li>
-        <li class="nav-item">
-          <a id="compare-teams" class="nav-link" href="/comparison">Head to Head</a>
-        </li>
+            <a id="compare-teams" class="nav-link" href="/comparison">Comparison</a>
+          </li>
         <li class="nav-item">
           <a id="compare-scatter" class="nav-link" href="/scatter">Deep Dive</a>
         </li>
+        <li class="nav-item">
+          <a id="reference" class="nav-link" href="/reference">Reference</a>
+        </li>
+        
+        
+        
       </ul>
     </div>
   </nav>
