--- a/bracket_buddy/templates/comparison.html
+++ b/bracket_buddy/templates/comparison.html
@@ -5,10 +5,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="https://fonts.googleapis.com/css?family=Graduate" rel="stylesheet">
   <link rel="stylesheet" href="https://bootswatch.com/4/materia/bootstrap.css" />
   <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-  <title>Bracket Buddy - Head to Head</title>
+    <link href="https://fonts.googleapis.com/css?family=Graduate" rel="stylesheet">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <title>Bracket Buddy - Deep Dive</title>
 </head>
 
 <body>
