--- a/bracket_buddy/templates/comparison.html
+++ b/bracket_buddy/templates/comparison.html
@@ -41,22 +41,22 @@
   <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
     <form class="d-flex w-100 justify-content-end form-inline">
         <div class="form-group row" id="change-team">
-              <label for="team-year-filter-1" class="my-1 mr-2">Year 1</label>
+              <label for="team-year-filter-1" class="my-1 mr-2">Home Year</label>
               <div>
                 <select id="home-year-dropdown" name="team-year-filter-1" class="custom-select my-1 mr-sm-2">
                 </select>
               </div>
-              <label for="team-filter-1" class="my-1 mr-2">Team 1</label>
+              <label for="team-filter-1" class="my-1 mr-2">Home Team</label>
               <div>
                 <select id="home-team-dropdown" name="team-filter-1" class="custom-select my-1 mr-sm-2">
                 </select>
               </div>
-              <label for="team-year-filter-2" class="my-1 mr-2">Year 2</label>
+              <label for="team-year-filter-2" class="my-1 mr-2">Away Year</label>
               <div>
                 <select id="away-year-dropdown" name="team-year-filter-2" class="custom-select my-1 mr-sm-2">
                 </select>
               </div>
-              <label for="team-filter-2" class="my-1 mr-2">Team 2</label>
+              <label for="team-filter-2" class="my-1 mr-2">Away Team</label>
               <div>
                 <select id="away-team-dropdown" name="team-filter-2" class="custom-select my-1 mr-sm-2">
                 </select>
