remove ff option from 4factors radar

--- a/bracket_buddy/templates/reference.html
+++ b/bracket_buddy/templates/reference.html
@@ -28,7 +28,7 @@
               <a id="team-page" class="nav-link" href="/team">Team Statistics</a>
             </li> 
             <li class="nav-item">
-              <a id="compare-teams" class="nav-link" href="/comparison">Comparison</a>
+              <a id="compare-teams" class="nav-link" href="/comparison">Head to Head</a>
             </li>
             <li class="nav-item">
               <a id="compare-scatter" class="nav-link" href="/scatter">Deep Dive</a>
