--- a/bracket_buddy/templates/index.html
+++ b/bracket_buddy/templates/index.html
@@ -30,7 +30,7 @@
                 <a id="team-page" class="nav-link" href="/team">Team Statistics</a>
               </li>
             <li class="nav-item">
-                <a id="compare-teams" class="nav-link" href="/comparison">Comparison</a>
+                <a id="compare-teams" class="nav-link" href="/comparison">Head to Head</a>
               </li>
               <li class="nav-item">
                 <a id="compare-scatter" class="nav-link" href="/scatter">Deep Dive</a>
@@ -153,9 +153,6 @@
   </button>
   <div id="navbar2" class="collapse navbar-collapse d-flex justify-content-end">
   <ul class="navbar-nav mr-auto d-flex justify-content-end">
-    <li class="nav-item d-flex justify-content-right">
-      <a id="reference" class="nav-link" href="/reference">Reference</a>
-    </li>
     <li class="nav-item d-flex justify-content-right">
     <a class="nav-link" data-toggle="collapse" href="#collapseInfo" role="button" aria-expanded="false" aria-controls="collapseExample">About</a></li>
   </ul>
