reordered pictures, added padding

--- a/bracket_buddy/templates/index.html
+++ b/bracket_buddy/templates/index.html
@@ -63,14 +63,14 @@
     </div>
 
 
-    <div class="container-fluid content-row mt-5">
+    <div class="container-fluid content-row mt-5 mb-5">
       <div class="row">
         <div class="col-md-6 col-sm-3">
           <div class="card mb-3 h-100">
             <a href="/team">
               <div class="row">
                 <div class="col-md-6 mb-3">
-                <img src="../static/images/predict.jpg" class="card-img" alt="Team Page">
+                <img src="../static/images/team.jpg" class="card-img" alt="Team Page">
                 </div>
                 <div class="col-md-6 mb-3">
                   <div class="card-body">
@@ -107,7 +107,7 @@
             <a href="/scatter">
               <div class="row">
                 <div class="col-md-6 mb-3">
-                <img src="../static/images/team.jpg" class="card-img" alt="Explore">
+                <img src="../static/images/headerraw.jpg" class="card-img" alt="Explore">
                 </div>
                 <div class="col-md-6 mb-3">
                   <div class="card-body">
@@ -124,7 +124,7 @@
             <a href="/reference">
               <div class="row">
                 <div class="col-md-6 mb-3">
-                <img src="../static/images/headerraw.jpg" class="card-img" alt="Reference">
+                <img src="../static/images/predict.jpg" class="card-img" alt="Reference">
                 </div>
                 <div class="col-md-6 mb-3">
                   <div class="card-body">
@@ -138,7 +138,7 @@
         </div>
       </div><!--row-->
     </div>
-  <footer class="fixed-bottom">
+  <footer class="fixed-bottom mt-5">
       <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar2">
           <span class="navbar-toggler-icon"></span>
