small comparison page change

--- a/bracket_buddy/templates/comparison.html
+++ b/bracket_buddy/templates/comparison.html
@@ -104,7 +104,7 @@
           <h4 style="text-align: center">Four Factors</h4>
         <canvas id="homeRadarFF" aspectRatio="1"></canvas>
       </div>
-      <div class="col-md-6 col-sm-12 col-xs-12" id="home-radar-rank">
+      <div class="col-md-6 col-sm-12 col-xs-12 mb-5" id="home-radar-rank">
           <h4 style="text-align: center">National Rankings</h4>
         <canvas id="homeRadarRank" aspectRatio="1"></canvas>
       </div>
