--- a/bracket_buddy/static/css/style.css
+++ b/bracket_buddy/static/css/style.css
@@ -1,6 +1,14 @@
 #content {
 	text-align: center;
 }
+
+#container {
+    width: 1200px;
+    height: 300px;
+    margin: 0;
+    padding: 0;
+}
+
 .mainjumbo {
 	position: relative;
 	margin: 0;
