--- a/bracket_buddy/templates/index.html
+++ b/bracket_buddy/templates/index.html
@@ -8,36 +8,35 @@
     <link rel="stylesheet" href="https://bootswatch.com/4/materia/bootstrap.css" />
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
       <link href="https://fonts.googleapis.com/css?family=Graduate" rel="stylesheet">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <title>Bracket Buddy - Home</title>
+    <title>Bracket Buddy - Home</title> -->
   </head>
-<body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand active flex-grow-1" href="/" style="font-family: 'Graduate';">
-        <img src="../static/images/basketball2.svg" width="30" height="30" class="d-inline-block align-top" alt="Designed by Freepik from www.flaticon.com">
-        Bracket Buddy
-      </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
-              <a id="team-page" class="nav-link" href="/team">Team Statistics</a>
-            </li>
-          <li class="nav-item">
-              <a id="compare-teams" class="nav-link" href="/comparison">Head to Head</a>
-            </li>
-            <li class="nav-item">
-              <a id="compare-scatter" class="nav-link" href="/scatter">Deep Dive</a>
-            </li>
-          <li class="nav-item">
-            <a id="reference" class="nav-link" href="/reference">Reference</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
+<body><nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand active flex-grow-1" href="/" style="font-family: 'Graduate';">
+    <img src="../static/images/basketball2.svg" width="30" height="30" class="d-inline-block align-top" alt="Designed by Freepik from www.flaticon.com">
+    Bracket Buddy
+  </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+          <a id="compare-teams" class="nav-link" href="/comparison">Predict Winner</a>
+        </li>
+        <li class="nav-item">
+          <a id="team-page" class="nav-link" href="/team">Team Statistics</a>
+        </li>
+        <li class="nav-item">
+          <a id="compare-scatter" class="nav-link" href="/scatter">Deep Dive</a>
+        </li>
+      <li class="nav-item">
+        <a id="reference" class="nav-link" href="/reference">Reference</a>
+      </li>
+    </ul>
+  </div>
+</nav>
   <div class="container">
       <div class="collapse bg-light" id="collapseInfo" style="opacity: '70%'">
         <div class="card card-body">
@@ -65,15 +64,15 @@
       <div class="row">
         <div class="col-md-6 col-sm-3">
           <div class="card mb-3 h-100">
-            <a href="/team">
+            <a href="/comparison">
               <div class="row">
                 <div class="col-md-6 mb-3">
-                <img src="../static/images/team.jpg" class="card-img" alt="Team Page">
+                <img src="../static/images/headtohead.png" class="card-img" alt="Head to Head">
                 </div>
                 <div class="col-md-6 mb-3">
                   <div class="card-body">
-                    <h5 class="card-title">Team Page</h5>
-                    <p class="card-text">See all the stats of your favorite NCAA Division 1 team.</p>
+                    <h5 class="card-title">Predict a Winner</h5>
+                    <p class="card-text">Pit any two Division 1 teams against one another in a virtual game.</p>
                   </div>
                 </div>
               </div>
@@ -82,15 +81,15 @@
         </div>
         <div class="col-md-6 col-sm-3">
           <div class="card mb-3 h-100">
-            <a href="/comparison">
+            <a href="/team">
               <div class="row">
                 <div class="col-md-6 mb-3">
-                <img src="../static/images/headtohead.png" class="card-img" alt="Head to Head">
+                <img src="../static/images/team.jpg" class="card-img" alt="Team Page">
                 </div>
                 <div class="col-md-6 mb-3">
                   <div class="card-body">
-                    <h5 class="card-title">Head to Head</h5>
-                    <p class="card-text">Pit any two Division 1 teams against one another in a virtual game.</p>
+                    <h5 class="card-title">Team Statistics</h5>
+                    <p class="card-text">See all the stats of your favorite NCAA Division 1 team.</p>
                   </div>
                 </div>
               </div>
@@ -107,7 +106,7 @@
                 <div class="col-md-6 mb-3">
                   <div class="card-body">
                     <h5 class="card-title">Deep Dive</h5>
-                    <p class="card-text">Dig into the statistics to find trends amongst tournament, final four, and championship teams.</p>
+                    <p class="card-text">Dig into the statistics to find trends among tournament, final four, and championship teams.</p>
                   </div>
                 </div>
               </div>
@@ -124,7 +123,7 @@
                 <div class="col-md-6 mb-3">
                   <div class="card-body">
                     <h5 class="card-title">Reference</h5>
-                    <p class="card-text">Learn more about each of the statistics utilized on the site.</p>
+                    <p class="card-text">Learn more about each of the statistics used on the site.</p>
                   </div>
                 </div>
               </div>
