reformatting and cleanup, barchart working

--- a/bracket_buddy/templates/teamPage.html
+++ b/bracket_buddy/templates/teamPage.html
@@ -26,7 +26,7 @@
         <li class="nav-item">
             <a id="compare-teams" class="nav-link" href="/comparison">Predict Winner</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item selected">
             <a id="team-page" class="nav-link" href="/team">Team Statistics</a>
           </li>
           <li class="nav-item">
@@ -39,7 +39,7 @@
     </div>
   </nav>
   <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
-    <form class="d-flex w-100 justify-content-start pl-5 form-inline">
+    <form class="d-flex w-100 justify-content-center pl-5 form-inline">
         <div class="form-group row" id="change-team">
               <label for="team-year-filter" class="my-1 mr-2">Year</label>
               <div>
