--- a/bracket_buddy/templates/comparison.html
+++ b/bracket_buddy/templates/comparison.html
@@ -38,7 +38,7 @@
     </div>
   </nav>
   <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
-    <form class="d-flex w-100 justify-content-start pl-5 form-inline">
+    <form class="d-flex w-100 justify-content-center pl-5 form-inline">
         <div class="form-group row" id="change-team">
               <label for="team-year-filter-1" class="my-1 mr-2">Home Year</label>
               <div>
@@ -64,7 +64,10 @@
     </form>
   </nav>
   <div class="container">
-    <div class="row mt-4">
+    <div class="row mt-4 justify-content-center">
+      <h1>Predicted Scores</h1>
+    </div>
+    <div class="row">
       <div class="col-md-6 col-sm-6 col-xs-6 home-team-name">
         <span class="team-name" id="homeTeamName"></span>
       </div>
@@ -81,11 +84,9 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-md-4"></div>
-      <div class="col-md-4">
-        <canvas id="gauge"> </canvas>
+      <div class="col-md-4 offset-md-4">
+        <canvas id="winBar"> </canvas>
       </div>
-      <div class="col-md-4"></div>
     </div>
     <div class="row" id="scatterContainer">
       <div class="col-md-8 offset-md-2 mt-4">
@@ -134,7 +135,6 @@
   <script src="{{ url_for('static', filename='js/radar.js') }}"></script>
   <script src="{{ url_for('static', filename='js/barChart.js') }}"></script>
   <script src="{{ url_for('static', filename='js/comparison.js') }}"></script>
-  <script src="{{ url_for('static', filename='js/gauge.js') }}"></script>
 </body>
 
 </html>
