--- a/bracket_buddy/templates/index.html
+++ b/bracket_buddy/templates/index.html
@@ -60,8 +60,8 @@
         </div>
       </div>
     </div>
-    <div class="container-fluid content-row mt-5 mb-5">
-      <div class="row">
+    <div class="container-fluid content-row mt-3 mb-5">
+      <div class="row mb-5">
         <div class="col-md-6 col-sm-3">
           <div class="card mb-3 h-100">
             <a href="/comparison">
@@ -72,7 +72,7 @@
                 <div class="col-md-6 mb-3">
                   <div class="card-body">
                     <h5 class="card-title">Predict a Winner</h5>
-                    <p class="card-text">Pit any two Division 1 teams against one another in a virtual game.</p>
+                    <p class="card-text">Pit any two Division 1 teams against one another in a best of 100 tournament.</p>
                   </div>
                 </div>
               </div>
@@ -132,6 +132,7 @@
         </div>
       </div><!--row-->
     </div>
+  <div class="mt-5 mb-5"></div>
   <footer class="fixed-bottom mt-5">
       <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar2">
